feat: implement search api and data models
- Added data models for image and video search results, including documents and meta information.
- Created a mapper to transform API responses into domain models.
- Implemented KakaoSearchApi interface for making network requests.
- Created a repository implementation to handle data fetching and mapping.
- Integrated Paging 3 library for handling paginated data.
- Defined domain models for search results and error handling.
- Updated dependencies in gradle file.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ agp = "8.5.2"
 
 # Kotlin
 kotlin = "2.0.0"
+pagingRuntimeKtx = "3.3.6"
 serialization = "2.0.0"
 kotlinxSerializationJson = "1.5.0"
 kotlinxCoroutinesTest = "1.10.1"
@@ -56,6 +57,8 @@ androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecyc
 # 📌 Jetpack Compose
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingRuntimeKtx" }
+androidx-paging-runtime-ktx = { module = "androidx.paging:paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
 androidx-ui = { group = "androidx.compose.ui", name = "ui" }
 androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
