feat: Implement search result caching and bookmarking with Room DB
- Integrated Room database for caching search results and managing bookmarks.
- Added entities: `SearchResultEntity`, `SearchCacheInfoEntity`, and `BookmarkEntity`.
- Implemented DAOs: `SearchDao` and `BookmarkDao` with queries for data manipulation.
- Added converters for `SearchResultType`.
- Created repositories: `CachedSearchRepository` for cached search and `BookmarkRepositoryImpl` for bookmarks.
- Implemented `CachingAwarePagingSource` to handle data retrieval from cache or API.
- Added dependency injection modules for database and repositories.
- Updated build.gradle.kts to include Room dependencies and schema location.
- Modified `MainActivity` to display cached search results and integrate bookmarking functionality.
- Updated `SearchViewModel` to support toggling favorite status and observing favorite status changes.
- Removed `SearchScreen.kt` as its functionality is integrated into `MainActivity`.
- Refactored `SearchPagingSource` to include onPagesLoadedCallback for better caching control.
- Added core module for Coroutine dispatchers and application scope.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -37,6 +37,9 @@ okhttp = "4.12.0"
 loggingInterceptorVersion = "4.12.0"
 retrofit2KotlinxSerializationConverter = "0.8.0"
 
+# Room Database
+room = "2.6.1"
+
 # Unit Testing
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -82,6 +85,12 @@ mavericks-compose = { module = "com.airbnb.android:mavericks-compose", version.r
 mavericks-hilt = { module = "com.airbnb.android:mavericks-hilt", version.ref = "mavericksHilt" }
 mavericks-navigation = { module = "com.airbnb.android:mavericks-navigation", version.ref = "mavericksNavigation" }
 mavericks-testing = { module = "com.airbnb.android:mavericks-testing", version.ref = "mavericks" }
+
+# 📌 Room Database
+androidx-room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+androidx-room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
+androidx-room-paging = { group = "androidx.room", name = "room-paging", version.ref = "room" }
 
 # 📌 Networking & Retrofit
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
